[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/HUD.gd" type="Script" id=1]
[ext_resource path="res://Fonts/advanced_pixel-7.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Textures/life_tile.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 25
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 2 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="score_lbl" type="Label" parent="."]
margin_left = 256.0
margin_right = 370.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 1 )
text = "Score: 0"
align = 1
valign = 1

[node name="life_sprite" type="Sprite" parent="."]
editor/display_folded = true
position = Vector2( 317, 128 )
scale = Vector2( 2.1875, 2.125 )
texture = ExtResource( 3 )

[node name="life_lbl" type="Label" parent="life_sprite"]
margin_left = -16.0
margin_top = -15.0
margin_right = 16.0
margin_bottom = 15.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
valign = 1

